[book] 'debian packages backport' chapter 6 started

--- a/books/debian_packages_backport_reprepro_rebuildd_cowbuilder/06-rebuildd.mkd
+++ b/books/debian_packages_backport_reprepro_rebuildd_cowbuilder/06-rebuildd.mkd
@@ -1,1 +1,9 @@
-# rebuildd, le chef d'orchestre
+# rebuildd, le chef d'orchestre {#rebuildd}
+
+## Installation
+
+## Configuration
+
+## Intégration avec reprepro
+
+## En résumé
